[package]
name = "nbody-rs"
version = "0.1.0"
authors = ["Ivan Xu <info@chivalrystudio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "nbody"
harness = false
